--- a/index.html
+++ b/index.html
@@ -191,9 +191,26 @@
       </div> <!-- End .row -->
     </div> <!-- End .container -->
   </section>
+
 <div class="bg-black projects-card-wrapper"> 
   <div class="container">
-  <div class="row">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="card projects-card text-center p-3">
+          <div class="card-body">
+            <h4>694</h4>
+            <p>COMPLETED DESIGN</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+      <div class="card projects-card text-center p-3">
+        <div class="card-body">
+          <h4>321</h4>
+          <p>COMPLETED DESIGN</p>
+        </div>
+      </div>
+    </div>
     <div class="col-md-3">
       <div class="card projects-card text-center p-3">
         <div class="card-body">
@@ -203,40 +220,105 @@
       </div>
     </div>
     <div class="col-md-3">
-     <div class="card projects-card text-center p-3">
-       <div class="card-body">
-        <h4>321</h4>
-        <p>COMPLETED DESIGN</p>
-       </div>
-     </div>
-   </div>
-   <div class="col-md-3">
-     <div class="card projects-card text-center p-3">
-       <div class="card-body">
-        <h4>694</h4>
-        <p>COMPLETED DESIGN</p>
-       </div>
-     </div>
-   </div>
-   <div class="col-md-3">
-     <div class="card projects-card text-center p-3">
-       <div class="card-body">
-        <h4>694</h4>
-        <p>COMPLETED DESIGN</p>
-       </div>
-     </div>
-   </div>
+      <div class="card projects-card text-center p-3">
+        <div class="card-body">
+          <h4>694</h4>
+          <p>COMPLETED DESIGN</p>
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
-</div>
+
 <section class="portfolio">
-  <div class="cotainer">
+  <div class="container mb-5">
+    <!-- section heading -->
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <div class="heading text-center">
           <img src="./asset/image/icon/icon-5.png" alt="Our Services">
           <h2>OUR SERVICES</h2>
           <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- profolio names -->
+    <div class="row align-items-center">
+      <div class="col-md-5">
+        <div class="portfolio-name d-flex justify-content-around py-3">
+          <div>Graphic</div>
+          <div>Web</div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="portfolio-logo text-center">
+          <img src="./asset/image/logo-drak.png" alt="logo-drak">
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="portfolio-name d-flex justify-content-around py-3">
+          <div>Development</div>
+        <div>App</div>
+        </div>
+      </div>
+      </div>
+  </div>
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card">
+          <img src="./asset/image/portfolio/portfolio-1.jpg" alt="portfolio" />
+          <div class="hover-content">
+            <h3>maimunaaa</h3>
+            <p>thank you for this</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card">
+          <img src="./asset/image/portfolio/portfolie-2.jpg" alt="portfolio" />
+          <div class="hover-content">
+            <h3>maimunaaa</h3>
+            <p>thank you for this</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card">
+          <img src="./asset/image/portfolio/portfolio-3.jpg" alt="portfolio" />
+          <div class="hover-content">
+            <h3>maimunaaa</h3>
+            <p>thank you for this</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card position-relative">
+          <img src="./asset/image/portfolio/portfolio-4.jpg" alt="portfolio" />
+          <div class="hover-content position-absolute top-50 start-50 translate-middle bg-white w-75 h-75 p-4 ">
+            <h3 class="mb-1">Our portfolio</h3>
+            <p class="mb-0">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card">
+          <img src="./asset/image/portfolio/portfolio-5.jpg" alt="portfolio" />
+          <div class="hover-content">
+            <h3>maimunaaa</h3>
+            <p>thank you for this</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 px-0">
+        <div class="portfolio-card">
+          <img src="./asset/image/portfolio/portfolio-6.jpg" alt="portfolio" />
+          <div class="hover-content">
+            <h3>maimunaaa</h3>
+            <p>thank you for this</p>
+          </div>
         </div>
       </div>
     </div>
